// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Extensions > renders correctly with empty extensions 1`] = `
<div
  class="_t8qIa_spectrum kDKRXa_spectrum kDKRXa_i18nFontFamily YqfL3a_spectrum--light _1DrGeG_spectrum--large XhWg9q_spectrum XhWg9q_spectrum--dark XhWg9q_spectrum--darkest XhWg9q_spectrum--large XhWg9q_spectrum--light XhWg9q_spectrum--lightest XhWg9q_spectrum--medium"
  dir="ltr"
  lang="en-US"
  style="isolation: isolate; color-scheme: light;"
>
  <nav
    aria-label="Extensions"
    class="_extensions-root_86ca92"
  />
</div>
`;

exports[`Extensions > renders correctly with extensions 1`] = `
<div
  class="_t8qIa_spectrum kDKRXa_spectrum kDKRXa_i18nFontFamily YqfL3a_spectrum--light _1DrGeG_spectrum--large XhWg9q_spectrum XhWg9q_spectrum--dark XhWg9q_spectrum--darkest XhWg9q_spectrum--large XhWg9q_spectrum--light XhWg9q_spectrum--lightest XhWg9q_spectrum--medium"
  dir="ltr"
  lang="en-US"
  style="isolation: isolate; color-scheme: light;"
>
  <nav
    aria-label="Extensions"
    class="_extensions-root_86ca92"
  >
    <button
      class="o7Xu8a_spectrum-ActionButton o7Xu8a_spectrum-BaseButton o7Xu8a_i18nFontFamily o7Xu8a_spectrum-FocusRing o7Xu8a_spectrum-FocusRing-ring _navButton_86ca92"
      data-react-aria-pressable="true"
      tabindex="0"
      type="button"
    >
      <span
        class="o7Xu8a_spectrum-ActionButton-label"
        role="none"
      >
        extension1
      </span>
    </button>
    <button
      class="o7Xu8a_spectrum-ActionButton o7Xu8a_spectrum-BaseButton o7Xu8a_i18nFontFamily o7Xu8a_spectrum-FocusRing o7Xu8a_spectrum-FocusRing-ring _navButton_86ca92"
      data-react-aria-pressable="true"
      tabindex="0"
      type="button"
    >
      <span
        class="o7Xu8a_spectrum-ActionButton-label"
        role="none"
      >
        extension2
      </span>
    </button>
  </nav>
</div>
`;
